fixed height of faq on mobile

--- a/src/scss/components/landing/cta/actions/_sponsor.scss
+++ b/src/scss/components/landing/cta/actions/_sponsor.scss
@@ -22,11 +22,14 @@
     font-size: 1.85em;
     margin: 0 auto;
   }
+  @include respond(phone) {
+    text-align: center;
+    padding-bottom: 2em;
+
+  }
   @include respond(phone-narrow) {
     width: 10em;
     margin: auto;
-    text-align: center;
-    padding-bottom: 2.5em;
   }
 }
 &__sponsor-description-container {
@@ -38,6 +41,8 @@
   font-family: SofiaProSoftW01-Regular;
   font-size: 16px;
   line-height: 12px;
+
+  align-content: center;
 
   letter-spacing: 0.02em;
   @include responsive-font(1.9vw, 14px, 16px);
